--- a/config.toml
+++ b/config.toml
@@ -235,6 +235,11 @@ uglyURLs = false
     [[menu.main]]
         weight = 7
         identifier = "lang-switcher"
+    [[menu.main]]
+        weight = 8
+        identifier = "search"
+        post = "search"
+
 
 
 
