--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 ##########################################
 # Site Settings
 
-baseURL = "/"
+baseURL = "//www.sdartscene.net"
 title = "San Diego Arts and Culture"
 languageCode = "en"
 hasCJKLanguage = false
