--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 # Site Settings
 
 baseURL = "//www.sdartscene.net"
-canonifyURLs: false
+canonifyURLs = false
 title = "San Diego Arts and Culture"
 languageCode = "en"
 hasCJKLanguage = false
